--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
   --color-primary-light: #E0F7FF;
   --color-footer-text: #8892AC;
   --border-light: 1px solid #e6e6e6;
+  --border-medium: 1px solid #bdbdbd;
   --border-dark: 1px solid var(--color-body);
+  font-size: 62.5%;
 }
 
 body {
@@ -57,7 +59,7 @@ input:focus {
   font-weight: 500;
   color: #1d1d1d;
 }
-.disclaimer .highlights {
+.highlights {
   color: #00ADE9;
 }
 
@@ -350,23 +352,22 @@ h2 {
   flex-direction: row;
   gap: 20px;
   border-radius: 10px;
-  width: 330px;
-  height: 115px;
+  width: 33rem;
+  height: 11.5rem;
   padding: 16px;
   margin: 0;
 }
 .cookie {
-  height: 140px;
-  padding-right: 70px;
+  height: 14rem;
 }
 .status h3 {
-  font-size: 13px;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -0.55px;
   color: var(--color-headings);
 }
 .status p {
-  font-size: 11px;
+  font-size: 1.1rem;
   font-weight: 400;
   letter-spacing: -0.28px;
   color:var(--color-body);
@@ -387,4 +388,66 @@ h2 {
 .status .right {
   display: flex;
   flex-direction: column;
+}
+/* greetings */
+.greetings {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  border-radius: 15px;
+  background: white;
+  align-items: center;
+  padding: 2rem;
+  width: 70%;
+  margin: 0 auto;
+}
+.greetings .text {
+  width: 70%;
+  margin: auto;
+}
+.circle {
+  width: 120px;
+  height: 120px;
+  background: skyblue;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+}
+.greetings .text {
+  margin: auto;
+  width: 70%;
+  font-size: 1.8rem;
+  font-weight: normal;
+  letter-spacing: -0.45px;
+}
+.text p {
+  text-align: justify;
+  text-align-last: center;
+}
+/* list */
+.card.fund-list {
+  background: #f5f5f5;
+  box-shadow: none;
+}
+.list__item {
+  padding: 1rem 0;
+  border-bottom: var(--border-light);
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  font-weight: 500;
+  letter-spacing: -0.21px;
+  color: var(--color-headings);
+}
+.amount {
+  font-weight: 700;
+}
+.fund-list {
+  width: 100%;
+}
+li:nth-last-child(2) {
+  border-bottom: var(--border-medium);
+}
+li:last-child {
+  border: none;
 }
