--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,15 @@ code {
   .border-bottom-light {
     @apply border-b-[1px] border-[#e6e6e6];
   }
-  .border-bottom-light {
+  .border-bottom-medium {
     @apply border-b-[1px] border-[#999999];
   }
 
   /* headings */
   .portal-heading {
     @apply sm:text-[2rem] text-[2.6rem] font-bold sm:tracking-[-0.5px] tracking-[-0.65px] text-headings;
+  }
+  .portal-subheading {
+    @apply text-[1.8rem] font-bold tracking-[-0.45px] text-headings;
   }
 }
