some issues in radio and input fields

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ code {
   .border-bottom-light {
     @apply border-b-[1px] border-[#e6e6e6];
   }
+  .border-light {
+    @apply border-[1px] border-[#e6e6e6];
+  }
   .border-bottom-medium {
     @apply border-b-[1px] border-[#999999];
   }
