--- a/src/components/homepage/appeals/component.html.erb
+++ b/src/components/homepage/appeals/component.html.erb
@@ -6,9 +6,9 @@
     </div>
 
   </div>
-  <div class="flex justify-between bg-Ghost-White px-48 pb-16 pt-36 -mt-36">
+  <div class="flex justify-between bg-Ghost-white px-48 pb-16 pt-36 -mt-36">
     <div class="invisible">Invisible Content</div>
     <%= image_tag "template-pager.svg" %>
-    <button class="px-3 py-2 border-Gray border-2 border-opacity-50 rounded-lg text-Space-Cadet text-sm font-semibold">View All</button>
+    <button class="px-3 py-2 border-Gray border-2 border-opacity-50 rounded-lg text-primary-dark text-sm font-semibold">View All</button>
   </div>
 </section>
