--- a/src/components/homepage/donation_types/component.html.erb
+++ b/src/components/homepage/donation_types/component.html.erb
@@ -1,37 +1,37 @@
 <section>
   <div class="flex space-x-8 py-8">
-    <div class="basis-[60%] space-y-8 flex flex-col pl-48 bg-White">
+    <div class="basis-[60%] space-y-8 flex flex-col pl-48 bg-white">
       <div class="flex flex-col mr-96 space-y-4">
-        <p class="text-Eerie-Black text-3xl font-bold tracking-[-0.75px]">Ways to give</p>
-        <p class="text-Outer-Space text-[22px] font-normal tracking-[-0.55px]">Crowd funding lets people play a more important role in their charity.
+        <p class="text-black text-3xl font-bold tracking-[-0.75px]">Ways to give</p>
+        <p class="text-body text-[22px] font-normal tracking-[-0.55px]">Crowd funding lets people play a more important role in their charity.
         Start building your network of giving today.</p>
       </div>
       <!-- steps box -->
       <div class="flex flex-col space-y-4 pr-44">
         <!-- first box -->
         <div class="flex items-center p-4 space-x-8  shadow-md border-Gray border-2 border-opacity-25 rounded-lg">
-          <p class="text-Space-Cadet text-[38px] font-medium tracking-[-0.95px]">01.</p>
+          <p class="text-primary-dark text-[38px] font-medium tracking-[-0.95px]">01.</p>
           <%= image_tag "off-donation.svg" %>
           <div class="flex flex-col space-y-2">
-            <p class="text-Eerie-Black text-lg font-bold tracking-[-0.45px]">You could make a quick one off donation</p>
+            <p class="text-black text-lg font-bold tracking-[-0.45px]">You could make a quick one off donation</p>
             <p class="text-Spanish-Gray text-base font-normal tracking-[-0.4px]">For those last minute donors or when your unsure of how much to give</p>
           </div>
         </div>
         <!-- second box -->
         <div class="flex items-center p-4 space-x-8  shadow-md border-Gray border-2 border-opacity-25 rounded-lg">
-          <p class="text-Space-Cadet text-[38px] font-medium tracking-[-0.95px]">02.</p>
+          <p class="text-primary-dark text-[38px] font-medium tracking-[-0.95px]">02.</p>
           <%= image_tag "subscription-donation.svg" %>
           <div class="flex flex-col space-y-2">
-            <p class="text-Eerie-Black text-lg font-bold tracking-[-0.45px]">Subscription donation</p>
+            <p class="text-black text-lg font-bold tracking-[-0.45px]">Subscription donation</p>
             <p class="text-Spanish-Gray text-base font-normal tracking-[-0.4px]">Making a donation on every Friday or come Ramadan for that continuous support</p>
           </div>
         </div>
         <!-- third box -->
         <div class="flex items-center p-4 space-x-8  shadow-md border-Gray border-2 border-opacity-25 rounded-lg">
-          <p class="text-Space-Cadet text-[38px] font-medium tracking-[-0.95px]">03.</p>
+          <p class="text-primary-dark text-[38px] font-medium tracking-[-0.95px]">03.</p>
           <%= image_tag "project-backed-donation.svg" %>
           <div class="flex flex-col space-y-2">
-            <p class="text-Eerie-Black text-lg font-bold tracking-[-0.45px]">Project Backed donation</p>
+            <p class="text-black text-lg font-bold tracking-[-0.45px]">Project Backed donation</p>
             <p class="text-Spanish-Gray text-base font-normal tracking-[-0.4px]">This is great when you back a project that’s close to your heart and receive updates</p>
           </div>
         </div>
@@ -41,9 +41,9 @@
     <div class="basis-[40%] flex flex-col">
       <%= image_tag "donation-types.png" %>
       <div class="flex flex-col space-y-4 pr-48">
-        <p class="text-Vivd-Cerulean text-[36px] font-bold tracking-[-0.54px]">Don’t wait for the world to improve.</p>
-        <p class="text-Outer-Space text-[22px] font-normal tracking-[-0.55px]">Drive meaningful change.</p>
-        <button class="w-[170px] h-[50px] text-Vivd-Cerulean border-2 border-Vivd-Cerulean rounded-lg">REGISTER NOW</button>
+        <p class="text-primary text-[36px] font-bold tracking-[-0.54px]">Don’t wait for the world to improve.</p>
+        <p class="text-body text-[22px] font-normal tracking-[-0.55px]">Drive meaningful change.</p>
+        <button class="w-[170px] h-[50px] text-primary border-2 border-primary rounded-lg">REGISTER NOW</button>
       </div>
     </div>
   </div>
