--- a/src/components/homepage/faqs_section/faq/component.html.erb
+++ b/src/components/homepage/faqs_section/faq/component.html.erb
@@ -1,7 +1,7 @@
 <!-- question box -->
 <div class="flex flex-col border-Gray border-2 rounded-lg w-[42rem] px-4 py-6">
   <div class="flex justify-between">
-    <p class="text-Eerie-Black text-lg font-bold tracking-[-0.45px]"><%= @detail[:question] %></p>
+    <p class="text-black text-lg font-bold tracking-[-0.45px]"><%= @detail[:question] %></p>
     <% if @detail[:answer].present? %>
       <%= image_tag "minus.svg", class: "w-3" %>
     <% else %>
