--- a/src/components/homepage/hadith_section/component.html.erb
+++ b/src/components/homepage/hadith_section/component.html.erb
@@ -1,7 +1,7 @@
 <section>
-  <div class="flex items-center h-[150px] space-y-2 bg-Vivd-Cerulean px-48">
-    <p class="text-White text-lg font-semibold tracking-[-0.45px] leading-[28px] basis-[70%] ">Faithful believers are to each other as the bricks of a wall, supporting and reinforcing each other.<br>So saying, the Prophet Muhammad clasped his hands by interlocking his fingers.</p>
-    <div class="basis-[30%] flex space-x-6 items-end justify-end text-Off-White text-base font-medium tracking-[-0.24px] leading-[20px] ">
+  <div class="flex items-center h-[150px] space-y-2 bg-primary px-48">
+    <p class="text-white text-lg font-semibold tracking-[-0.45px] leading-[28px] basis-[70%] ">Faithful believers are to each other as the bricks of a wall, supporting and reinforcing each other.<br>So saying, the Prophet Muhammad clasped his hands by interlocking his fingers.</p>
+    <div class="basis-[30%] flex space-x-6 items-end justify-end text-Off-white text-base font-medium tracking-[-0.24px] leading-[20px] ">
       <p>Prophet Muhammed (Al-Bukhari)</p>
       <%= image_tag "double-quotes.svg", alt: "double quotes" %>
     </div>
