--- a/src/components/homepage/policy_section/component.html.erb
+++ b/src/components/homepage/policy_section/component.html.erb
@@ -1,7 +1,7 @@
 <section>
     <div class="flex px-48 py-12">
-      <p class="basis-[30%] text-Eerie-Black text-3xl font-bold tracking-[-0.75px] pr-48">Passionate about progress</p>
-      <p class="basis-[70%] text-Outer-Space text-[22px] font-normal tracking-[-0.55px] pl-16 border-l border-opacity-25 border-Gray">We’ve always believed that charitable donations should find their way to the people
+      <p class="basis-[30%] text-black text-3xl font-bold tracking-[-0.75px] pr-48">Passionate about progress</p>
+      <p class="basis-[70%] text-body text-[22px] font-normal tracking-[-0.55px] pl-16 border-l border-opacity-25 border-Gray">We’ve always believed that charitable donations should find their way to the people
       who need them most, and always without delay. It’s why we’ve created a simple <span class="font-bold">100%
       donation policy</span> that makes sure every donation can:</p>
     </div>
@@ -9,26 +9,26 @@
       <div class="basis-[60%]">
         <%= image_tag "food.png", class: "w-[810px] h-[530px]" %>
       </div>
-      <div class="flex flex-col bg-White w-[330px] h-[175px] px-16 py-8 border-Amber border-2 rounded-lg absolute top-[10rem] left-[55rem]">
-        <p class="text-center text-Space-Cadet text-lg font-normal tracking-[-0.45px]"><span class="text-Eerie-Black font-bold">Get Distributed Fairly</span> because never take a penny towards our running costs</p>
+      <div class="flex flex-col bg-white w-[330px] h-[175px] px-16 py-8 border-amber border-2 rounded-lg absolute top-[10rem] left-[55rem]">
+        <p class="text-center text-primary-dark text-lg font-normal tracking-[-0.45px]"><span class="text-black font-bold">Get Distributed Fairly</span> because never take a penny towards our running costs</p>
         <%= image_tag "sun.svg", class: "h-[55px] absolute -top-7 left-32" %>
       </div>
 
       <div class="basis-[40%] flex flex-col pt-24 pl-48 space-y-12">
-        <div class="flex flex-col bg-White w-[330px] h-[175px] px-16 py-8 border-Vivd-Cerulean border-2 rounded-lg relative">
-          <p class="text-center text-Space-Cadet text-lg font-normal tracking-[-0.45px]"><span class="text-Eerie-Black font-bold">Make A Difference</span> to the people in the world who need you</p>
+        <div class="flex flex-col bg-white w-[330px] h-[175px] px-16 py-8 border-primary border-2 rounded-lg relative">
+          <p class="text-center text-primary-dark text-lg font-normal tracking-[-0.45px]"><span class="text-black font-bold">Make A Difference</span> to the people in the world who need you</p>
           <%= image_tag "weighing-scale.svg", class: "h-[55px] absolute -top-7 left-32" %>
         </div>
-        <div class="flex flex-col bg-White w-[330px] h-[175px] px-16 py-8 border-Space-Cadet border-2 rounded-lg relative">
-          <p class="text-center text-Space-Cadet text-lg font-normal tracking-[-0.45px]"><span class="text-Eerie-Black font-bold">Be Spent Wisely</span> on projects that change lives and build communities</p>
+        <div class="flex flex-col bg-white w-[330px] h-[175px] px-16 py-8 border-primary-dark border-2 rounded-lg relative">
+          <p class="text-center text-primary-dark text-lg font-normal tracking-[-0.45px]"><span class="text-black font-bold">Be Spent Wisely</span> on projects that change lives and build communities</p>
           <%= image_tag "bulb.svg", class: "h-[55px] absolute -top-7 left-32" %>
         </div>
         <%= image_tag "footer-background-logo", class: "absolute -top-8 right-80 h-[80%] z-[-1]" %>
       </div>
       <div class="flex space-x-4 absolute top-[27rem] left-[21rem]">
-        <p class="text-White text-[25px] font-semibold tracking-[-1.25px]">we transfer</p>
+        <p class="text-white text-[25px] font-semibold tracking-[-1.25px]">we transfer</p>
         <%= image_tag "100percent", class: "w-[274px] h-[112px]" %>
-        <p class="text-White text-[17px] font-semibold tracking-[-0.85px]">of your donation</p>
+        <p class="text-white text-[17px] font-semibold tracking-[-0.85px]">of your donation</p>
       </div>
     </div>
 </section>
