--- a/src/components/homepage/achievements_section/component.html.erb
+++ b/src/components/homepage/achievements_section/component.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col space-y-[3.5rem] items-center bg-Off-White py-[3.5rem]">
+<div class="flex flex-col space-y-[3.5rem] items-center bg-Off-white py-[3.5rem]">
   <p><span class="text-[30px] font-bold tracking-[-0.75px] leading-[34px]">Our Achievements</span><span class="text-[30px] font-medium tracking-[-0.75px] leading-[34px]"> with your help and more …</span></p>
   <div class="flex justify-center space-x-6">
     <%= render Homepage::AchievementsSection::Achievement::Component.with_collection(@project_details) %>
