--- a/src/components/homepage/events_section/component.html.erb
+++ b/src/components/homepage/events_section/component.html.erb
@@ -1,4 +1,4 @@
-<section class="flex flex-col space-y-14 bg-White py-14 px-48">
+<section class="flex flex-col space-y-14 bg-white py-14 px-48">
   <p class="text-center text-3xl font-bold tracking-[-0.75px] leading-[34px]">Upcoming Events</p>
   <div class="flex justify-between">
     <%= render Homepage::EventsSection::Event::Component.with_collection(@event_details) %>
