--- a/src/components/homepage/faqs_section/component.html.erb
+++ b/src/components/homepage/faqs_section/component.html.erb
@@ -5,8 +5,8 @@
     <%= image_tag "blue-circle.svg", class: "absolute top-[16rem] right-[26rem]" %>
 
     <div class="flex justify-center items-center space-x-32">
-      <p class="text-Outer-Space text-[30px] font-bold tracking-[-0.75px]">FAQ</p>
-      <p class="text-Outer-Space text-[22px] font-light tracking-[-0.75px]">Do you have more questions? Check out our full <span class="text-Vivd-Cerulean font-semibold">FAQ</span></p>
+      <p class="text-body text-[30px] font-bold tracking-[-0.75px]">FAQ</p>
+      <p class="text-body text-[22px] font-light tracking-[-0.75px]">Do you have more questions? Check out our full <span class="text-primary font-semibold">FAQ</span></p>
     </div>
     <div class="flex flex-col justify-center items-center space-y-4 mx-auto">
       <%= render Homepage::FaqsSection::Faq::Component.with_collection(@details) %>
