--- a/src/components/homepage/testimonials_section/testimonial/component.html.erb
+++ b/src/components/homepage/testimonials_section/testimonial/component.html.erb
@@ -1,11 +1,11 @@
-<div class="flex flex-col justify-between space-y-2 bg-White p-[2rem] w-[450px] h-[250px] rounded-xl relative">
+<div class="flex flex-col justify-between space-y-2 bg-white p-[2rem] w-[450px] h-[250px] rounded-xl relative">
   <%= image_tag "gradient-bar.svg", class: "absolute top-0 left-0", alt: "gradient bar" %>
-  <p class="text-Outer-Space font-normal text-base tracking-[-0.4px] leading-[24px]"><%= @testimonial[:feedback] %></p>
+  <p class="text-body font-normal text-base tracking-[-0.4px] leading-[24px]"><%= @testimonial[:feedback] %></p>
   <div class="flex justify-between items-center">
     <div class="flex space-x-4">
       <%= image_tag @testimonial[:image], class: "w-[45px] h-[45px]", alt: "testimonial pic" %>
       <div class="flex flex-col space-y-1">
-        <p class="text-Vivd-Cerulean font-bold text-[22px] tracking-[-0.55px] leading-[24px]"><%= @testimonial[:title] %></p>
+        <p class="text-primary font-bold text-[22px] tracking-[-0.55px] leading-[24px]"><%= @testimonial[:title] %></p>
         <p class="text-Testimonial-Gray font-medium text-11 tracking-[-0.17px] leading-[13px]"><%= @testimonial[:age] %></p>
       </div>
     </div>
