--- a/src/components/homepage/achievements_section/achievement/component.html.erb
+++ b/src/components/homepage/achievements_section/achievement/component.html.erb
@@ -1,10 +1,10 @@
-<div class="flex flex-col justify-center space-y-2 bg-white px-6  w-[330px] h-[150px] rounded-xl">
-  <div class="flex space-x-2">
+<div className="flex flex-col justify-center space-y-2 bg-white px-6  w-[330px] h-[150px] rounded-xl">
+  <div className="flex space-x-2">
     <%= image_tag "green-check.png", class: "w-[20px] h-[20px]", alt: "green check" %>
-    <p class="text-base font-bold tracking-[-0.4px] leading-[20px]"><%= @project_detail[:title] %></p>
+    <p className="text-[1.6rem] font-bold tracking-[-0.4px] leading-[20px]"><%= @project_detail[:title] %></p>
   </div>
-  <p class="text-primary"><span class="text-[11px] font-semibold tracking-[-0.17px] leading-[13px]">Raised:</span><span class="text-[24px] font-semibold tracking-[-0.36px] leading-[13px]"> <%= @project_detail[:amount] %></span></p>
-  <div class="flex space-x-1">
-    <span class="text-[11px] font-normal tracking-[-0.17px] leading-[13px]">crowded <%= @project_detail[:date] %> by</span><%= image_tag "profile-icon.svg" %><span class="text-[11px] font-normal tracking-[-0.17px] leading-[13px]"> <%= @project_detail[:supporters] %> supporters</span>
+  <p className="text-primary"><span className="text-[11px] font-semibold tracking-[-0.17px] leading-[13px]">Raised:</span><span className="text-[24px] font-semibold tracking-[-0.36px] leading-[13px]"> <%= @project_detail[:amount] %></span></p>
+  <div className="flex space-x-1">
+    <span className="text-[11px] font-normal tracking-[-0.17px] leading-[13px]">crowded <%= @project_detail[:date] %> by</span><%= image_tag "profile-icon.svg" %><span className="text-[11px] font-normal tracking-[-0.17px] leading-[13px]"> <%= @project_detail[:supporters] %> supporters</span>
   </div>
 </div>
