--- a/src/components/homepage/events_section/component.html.erb
+++ b/src/components/homepage/events_section/component.html.erb
@@ -1,11 +1,11 @@
-<section class="flex flex-col space-y-14 bg-white py-14 px-48">
-  <p class="text-center text-3xl font-bold tracking-[-0.75px] leading-[34px]">Upcoming Events</p>
-  <div class="flex justify-between">
+<section className="flex flex-col space-y-14 bg-white py-14 px-48">
+  <p className="text-center text-3xl font-bold tracking-[-0.75px] leading-[34px]">Upcoming Events</p>
+  <div className="flex justify-between">
     <%= render Homepage::EventsSection::Event::Component.with_collection(@event_details) %>
   </div>
-  <div class="flex justify-between">
-    <div class="invisible">Invisible Div</div>
+  <div className="flex justify-between">
+    <div className="invisible">Invisible Div</div>
     <%= image_tag "template-pager.svg", class: "", alt: "template-pager" %>
-    <button class="text-sm border-2 border-Gray border-opacity-25 w-[80px] h-[40px] rounded-lg">View All</button>
+    <button className="text-sm border-2 border-Gray border-opacity-25 w-[80px] h-[40px] rounded-lg">View All</button>
   </div>
 </section>
