--- a/src/components/homepage/faqs_section/component.html.erb
+++ b/src/components/homepage/faqs_section/component.html.erb
@@ -1,14 +1,14 @@
 <section>
-  <div class="flex flex-col space-y-8 bg-Platinum py-14 relative">
+  <div className="flex flex-col space-y-8 bg-Platinum py-14 relative">
     <%= image_tag "big-yellow-ring.svg", class: "absolute top-[-10rem] right-[3rem]" %>
     <%= image_tag "small-yellow-ring.svg", class: "absolute top-[17rem] left-[10rem]" %>
     <%= image_tag "blue-circle.svg", class: "absolute top-[16rem] right-[26rem]" %>
 
-    <div class="flex justify-center items-center space-x-32">
-      <p class="text-body text-[30px] font-bold tracking-[-0.75px]">FAQ</p>
-      <p class="text-body text-[22px] font-light tracking-[-0.75px]">Do you have more questions? Check out our full <span class="text-primary font-semibold">FAQ</span></p>
+    <div className="flex justify-center items-center space-x-32">
+      <p className="text-body text-[30px] font-bold tracking-[-0.75px]">FAQ</p>
+      <p className="text-body text-[22px] font-light tracking-[-0.75px]">Do you have more questions? Check out our full <span className="text-primary font-semibold">FAQ</span></p>
     </div>
-    <div class="flex flex-col justify-center items-center space-y-4 mx-auto">
+    <div className="flex flex-col justify-center items-center space-y-4 mx-auto">
       <%= render Homepage::FaqsSection::Faq::Component.with_collection(@details) %>
     </div>
   </div>
