--- a/src/components/homepage/motive_section/component.html.erb
+++ b/src/components/homepage/motive_section/component.html.erb
@@ -1,10 +1,10 @@
-<section class="flex bg-amber px-48 py-12">
-  <p class="basis-[25%] text-primary-dark text-[26px] font-semibold tracking-[-0.65px] leading-[30px] ">What if one action could change the world?</p>
-  <div class="flex basis-[25%] items-center space-x-4">
-    <div class="flex bg-primary-dark rounded-full relative w-[3rem] h-[3rem]">
+<section className="flex bg-amber px-48 py-12">
+  <p className="basis-[25%] text-primary-dark text-[26px] font-semibold tracking-[-0.65px] leading-[30px] ">What if one action could change the world?</p>
+  <div className="flex basis-[25%] items-center space-x-4">
+    <div className="flex bg-primary-dark rounded-full relative w-[3rem] h-[3rem]">
       <%= image_tag "logo.svg", class: "absolute top-[20%] left-[25%]" %>
     </div>
-    <p class="text-body text-base font-medium tracking-[-0.24px] leading-[20px]">Aid Humanity helps you make it happen…</p>
+    <p className="text-body text-[1.6rem] font-medium tracking-[-0.24px] leading-[20px]">Aid Humanity helps you make it happen…</p>
   </div>
-  <p class="flex basis-[50%] items-center justify-center text-primary-dark text-[24px] font-semibold tracking-[-0.6px] leading-[28px]">Give Back - Deliver Better - Drive Change</p>
+  <p className="flex basis-[50%] items-center justify-center text-primary-dark text-[24px] font-semibold tracking-[-0.6px] leading-[28px]">Give Back - Deliver Better - Drive Change</p>
 </section
